--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ ul {
 
 @media (max-width: 767px) {
 			#map-svg{
+				margin-top: 0px !important;
+				padding-top: 0px !important;
 				max-width: 100% !important;
 				width: 100% !important;
 				height: 100% !important;
