--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@ body
     padding-right: 0px;
 }
 
+
+.navbar-nav > li > a, .navbar-brand {
+    padding-top:5px !important; padding-bottom:0 !important;
+    height: 20px;
+}
+.navbar {min-height:20px !important;}
+
+.footer {min-height:80px !important;}
+
 #wrap
 {
     height: auto !important;
@@ -29,6 +38,31 @@ input[type=checkbox]
     width: 45px;
     height: 45px;
 }
+
+
+/* 
+
+ui-slider
+
+*/
+
+.ui-slider{
+    height: 35px !important;
+}
+
+.ui-widget-content { border: 1px solid #ccc; background: #ff9900 url(images/ui-bg_flat_100_ff9900_40x100.png) 50% 50% repeat-x; color: #222222; }
+.ui-widget-header { border: 1px solid #aaaaaa; background: #797979 url(images/ui-bg_highlight-soft_75_797979_1x100.png) 50% 50% repeat-x; color: #222222; font-weight: bold; }
+
+.ui-slider { position: relative; text-align: left; }
+.ui-slider .ui-slider-handle { position: absolute; z-index: 2; width: 1.2em; height: 1.2em; cursor: default; }
+.ui-slider .ui-slider-range { position: absolute; z-index: 1; font-size: .7em; display: block; border: 0; background-position: 0 0; }
+
+.ui-slider-horizontal { height: .8em; }
+.ui-slider-horizontal .ui-slider-handle { top: -.3em; margin-left: -.6em; }
+.ui-slider-horizontal .ui-slider-range { top: 0; height: 100%;  }
+.ui-slider-horizontal .ui-slider-range-min { left: 0;  }
+.ui-slider-horizontal .ui-slider-range-max { right: 0;}
+
 
 .Map
 {
