--- a/style.css
+++ b/style.css
@@ -102,9 +102,7 @@ ui-slider
 
     min-width: 200px;
     max-width: 300px;
-    height: auto !important;
-    height: 100%;
-    min-height: 100%;
+    height: 500px;
     margin: 10px;
 
     border: 2px solid black;
