--- a/style.css
+++ b/style.css
@@ -194,8 +194,9 @@ ul
 
 #time
 {
-    width: 100%;
-    margin: 0;
+    width: 90%;
+    margin-bottom: 10px;
+    margin-top: 3px;
 }
 
 #time .ui-slider-range
